Fix Vega having stretched portrait (#204)

--- a/ozaria/site/styles/play/level/level-dialogue-view.sass
+++ b/ozaria/site/styles/play/level/level-dialogue-view.sass
@@ -28,7 +28,6 @@
 
     .vega-narrator
       position: absolute
-      width: 20%
       left: 0
       height: 100%
 
